feat: add new CLI command patch