@@ -15,16 +15,26 @@
  */
 package io.streamthoughts.jikkou.schema.registry.reconciler;
 
+import io.streamthoughts.jikkou.core.DefaultApi;
+import io.streamthoughts.jikkou.core.JikkouApi;
 import io.streamthoughts.jikkou.core.ReconciliationContext;
 import io.streamthoughts.jikkou.core.ReconciliationMode;
+import io.streamthoughts.jikkou.core.config.Configuration;
 import io.streamthoughts.jikkou.core.data.TypeConverter;
+import io.streamthoughts.jikkou.core.extension.ClassExtensionAliasesGenerator;
+import io.streamthoughts.jikkou.core.extension.DefaultExtensionDescriptorFactory;
+import io.streamthoughts.jikkou.core.extension.DefaultExtensionFactory;
+import io.streamthoughts.jikkou.core.extension.DefaultExtensionRegistry;
+import io.streamthoughts.jikkou.core.models.ApiChangeResultList;
 import io.streamthoughts.jikkou.core.models.ObjectMeta;
+import io.streamthoughts.jikkou.core.models.ResourceListObject;
 import io.streamthoughts.jikkou.core.models.change.ResourceChange;
 import io.streamthoughts.jikkou.core.reconciler.ChangeResult;
 import io.streamthoughts.jikkou.core.reconciler.Operation;
-import io.streamthoughts.jikkou.core.reconciler.Reconciler;
+import io.streamthoughts.jikkou.core.resource.DefaultResourceRegistry;
 import io.streamthoughts.jikkou.schema.registry.AbstractIntegrationTest;
 import io.streamthoughts.jikkou.schema.registry.SchemaRegistryAnnotations;
+import io.streamthoughts.jikkou.schema.registry.api.SchemaRegistryClientConfig;
 import io.streamthoughts.jikkou.schema.registry.model.SchemaHandle;
 import io.streamthoughts.jikkou.schema.registry.model.SchemaType;
 import io.streamthoughts.jikkou.schema.registry.models.V1SchemaRegistrySubject;
@@ -38,10 +48,19 @@ import org.junit.jupiter.api.Test;
 class SchemaRegistrySubjectControllerTest extends AbstractIntegrationTest {
 
     private SchemaRegistrySubjectController controller;
+    private volatile JikkouApi api;
 
     @BeforeEach
     void beforeEach() {
-        controller = new SchemaRegistrySubjectController(getSchemaRegistryClientConfiguration());
+        SchemaRegistryClientConfig configuration = getSchemaRegistryClientConfiguration();
+        controller = new SchemaRegistrySubjectController(configuration);
+        DefaultExtensionRegistry registry = new DefaultExtensionRegistry(
+                new DefaultExtensionDescriptorFactory(),
+                new ClassExtensionAliasesGenerator()
+        );
+        api = DefaultApi.builder(new DefaultExtensionFactory(registry, Configuration.empty()), new DefaultResourceRegistry())
+                .register(SchemaRegistrySubjectController.class, () -> controller)
+                .build();
     }
 
     @Test
@@ -59,15 +78,15 @@ class SchemaRegistrySubjectControllerTest extends AbstractIntegrationTest {
                         .build())
                 .build();
         // When
-        Reconciler<V1SchemaRegistrySubject, ResourceChange> reconciler = new Reconciler<>(controller);
-        List<ChangeResult> results = reconciler.reconcile(
-                List.of(resource),
+        ApiChangeResultList result = api.reconcile(
+                ResourceListObject.of(List.of(resource)),
                 ReconciliationMode.CREATE,
                 ReconciliationContext.builder().dryRun(false).build()
         );
         // Then
+        List<ChangeResult> results = result.results();
         Assertions.assertEquals(1, results.size());
-        ChangeResult change = results.get(0);
+        ChangeResult change = results.getFirst();
         ResourceChange data = change.change();
         Assertions.assertEquals(Optional.of(1), data.getMetadata().findAnnotationByKey(SchemaRegistryAnnotations.JIKKOU_IO_SCHEMA_REGISTRY_SCHEMA_ID));
         Assertions.assertEquals(Operation.CREATE, data.getSpec().getOp());
